review overlapping fix

--- a/Website/css/restroomID_style.css
+++ b/Website/css/restroomID_style.css
@@ -174,7 +174,6 @@ div {
 
 #comments{
 	overflow: auto;
-	height: 325px;
 }
 
 #comments p{
@@ -223,10 +222,6 @@ div {
 	background-image: linear-gradient(90deg , rgb(233,220,126) 0%, rgb(246,241,180) 100%);
 	color: #A78E0F;
 	text-shadow: rgba(254,252,252,0.5) 0px 1px 0px;
-}
-
-.comment{
-	text-align: left;
 }
 
 /*Hover*/
@@ -304,10 +299,6 @@ div.Restrooms div.RestroomTitle img.icon{
 
 .addReview:hover, .addReply:hover, .thumb_up:hover, .thumb_down:hover{
 	cursor: pointer;
-}
-
-.RestroomTitle{
-	height: 100px;
 }
 
 .addReply{
